package services

import (
	"context"
	"log"

	"github.com/secretlyhq/secretly/server/grpc/interceptors"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// AuditService implements the gRPC audit service
type AuditService struct {
	// TODO: Add UnimplementedAuditServiceServer when proto is generated
}

// NewAuditService creates a new audit service
func NewAuditService() *AuditService {
	return &AuditService{}
}

// GetAuditLogs retrieves audit logs with filtering and pagination
func (s *AuditService) GetAuditLogs(ctx context.Context, req interface{}) (interface{}, error) {
	// Get user from context
	user := interceptors.GetUserFromGRPCContext(ctx)
	if user == nil {
		return nil, status.Errorf(codes.Unauthenticated, "User not authenticated")
	}

	// Check permissions
	hasPermission := false
	for _, perm := range user.Permissions {
		if perm == "audit.read" {
			hasPermission = true
			break
		}
	}

	if !hasPermission {
		return nil, status.Errorf(codes.PermissionDenied, "Insufficient permissions")
	}

	log.Printf("gRPC GetAuditLogs called by user %s", user.Username)

	// TODO: Implement actual audit log retrieval logic
	return nil, status.Errorf(codes.Unimplemented, "Method not implemented yet")
}

// GetRBACAuditLogs retrieves RBAC audit logs with filtering and pagination
func (s *AuditService) GetRBACAuditLogs(ctx context.Context, req interface{}) (interface{}, error) {
	// Get user from context
	user := interceptors.GetUserFromGRPCContext(ctx)
	if user == nil {
		return nil, status.Errorf(codes.Unauthenticated, "User not authenticated")
	}

	// Check permissions
	hasPermission := false
	for _, perm := range user.Permissions {
		if perm == "audit.read" {
			hasPermission = true
			break
		}
	}

	if !hasPermission {
		return nil, status.Errorf(codes.PermissionDenied, "Insufficient permissions")
	}

	log.Printf("gRPC GetRBACAuditLogs called by user %s", user.Username)

	// TODO: Implement actual RBAC audit log retrieval logic
	return nil, status.Errorf(codes.Unimplemented, "Method not implemented yet")
}

// StreamAuditLogs streams audit logs in real-time
func (s *AuditService) StreamAuditLogs(req interface{}, stream interface{}) error {
	// TODO: Implement audit log streaming
	// This would be a server-side streaming RPC
	log.Println("gRPC StreamAuditLogs called")

	return status.Errorf(codes.Unimplemented, "Method not implemented yet")
}
